fix(hero): adjust margin for h1 in hero content for better spacing

--- a/src/components/home-page-components/hero-section/HeroSection.css
+++ b/src/components/home-page-components/hero-section/HeroSection.css
@@ -42,7 +42,7 @@
   font-family: "Poppins", sans-serif;
   letter-spacing: 1px;
   text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
-  margin: 0rem 6rem 5rem 6rem;
+  margin: 3rem 6rem 5rem 6rem;
 }
 
 .hero-content h2 {
